@@ -1,3 +1,8 @@
+2007-06-15  Marcus Meissner  <marcus@jet.franken.de>
+
+	* library.c: Nikon Coolpix series capture now determines
+	  the captured filenames.
+
 2007-06-05  Marcus Meissner  <marcus@jet.franken.de>
 
 	* ptp.c, ptp.h, ptp-pack.c, library.c, config.c:
